# IS2-CasaDeCambios

./: .env.dev  .env.ejemplo  .env.tests  .gitattributes  .gitignore  .pre-commit-config.yaml  Makefile  Procfile  README.md  dev-commands.json  dev.py  docker-compose.dev.yml  docker-compose.prod.yml
app/: .dockerignore  Dockerfile  celerybeat-schedule-shm  celerybeat-schedule-wal  entrypoint.sh  manage.py  package-lock.json  package.json  pyproject.toml  pytest.ini  tailwind.config.js  test_ui_cash_restriction.py
app/apps/accounts/: forms.py  urls.py  views.py
app/apps/operaciones/: apps.py  forms.py  models.py  urls.py  utils.py  views.py
app/apps/operaciones/migrations/: 0001_initial.py  0002_alter_moneda_tipo_de_cambio_and_more.py  0002_crea_moneda_base.py  0002_divisa_estado_alter_divisa_codigo_and_more.py  0002_divisa_remove_moneda_tipo_de_cambio_and_more.py  0003_alter_divisa_estado.py  0003_alter_tasacambio_fecha_actualizacion.py  0003_tasacambio_hora_vigencia.py  0003_tasacambio_hora_vigencia_and_more.py  0004_alter_divisa_estado.py  0004_alter_tasacambio_comision_compra_and_more.py  0005_alter_tasacambio_comision_compra_and_more.py  0006_tasacambiohistorial.py  0007_divisa_estado_alter_divisa_codigo_and_more.py  0008_alter_divisa_simbolo.py  0008_remove_tasacambio_fecha_vigencia_and_more.py  0009_remove_tasacambio_fecha_vigencia_and_more.py  0009_rename_valor_tasacambiohistorial_precio_base_and_more.py  0010_alter_tasacambio_precio_base.py  0010_rename_valor_tasacambiohistorial_precio_base_and_more.py  0011_alter_tasacambio_precio_base.py  0012_alter_tasacambio_precio_base.py  0013_alter_divisa_simbolo.py  0013_alter_tasacambio_precio_base.py  0014_alter_tasacambiohistorial_fecha_registro.py
app/apps/operaciones/templates/: crear_divisa.html  crear_moneda.html  divisa_detalle.html  divisa_list.html  moneda_detalle.html  moneda_list.html  tasa_cambio_form.html  tasa_cambio_historial_list.html  tasa_cambio_list.html
app/apps/operaciones/templatetags/: custom_filters.py
app/apps/operaciones/tests/: conftest.py  test_crear_divisa.py  test_delete_divisa.py  test_divisa_detail.py  test_divisa_listar.py  test_edit_divisa.py  test_obtener_divisas.py  test_role_access.py  test_tasa_cambio.py  test_tasa_cambio_activar_desactivar.py  test_tasa_cambio_crear.py  test_tasa_cambio_editar.py  test_tasa_cambio_historial.py  test_tasa_cambio_listar.py  test_tasas_cambio_api.py  test_visualizar_historico_tasas.py  test_visualizar_tasa_cambio.py
app/apps/panel_admin/: apps.py  forms.py  models.py  test_usariomodel.py  tests.py  urls.py  views.py
app/apps/panel_admin/migrations/: 0001_initial.py  0002_permiso_tipocliente_alter_rol_nombre_rol_permisos_and_more.py  0003_cliente_usuarios.py
app/apps/panel_admin/templates/: asociar_cliente_usuario.html  cliente_list.html  configuracion.html  divisa_detalle.html  divisa_list.html  movimientos_stock_list.html  panel_inicio.html  rol_list.html  tasa_cambio_form.html  tasa_cambio_list.html  tauser_list.html  usuario_list.html
app/apps/panel_admin/tests/: conftest.py  test_asociacion_cliente_usuario_views.py  test_cliente_views.py  test_configuracion_descuento_comision.py  test_crear_divisa.py  test_delete_divisa.py  test_edit_divisa.py  test_panel_inicio.py  test_rol_views.py  test_tasa_cambio.py  test_tasa_cambio_historial.py  test_usuario_views.py
app/apps/presentacion/: apps.py  urls.py  views.py
app/apps/reportes/: urls.py  views.py
app/apps/seguridad/: apps.py  context_processors.py  decorators.py  forms.py  middleware.py  models.py  permissions.py  urls.py  utils.py  views.py
app/apps/stock/: api_views.py  models.py  services.py  tests.py  urls.py
app/apps/tauser/: apps.py  models.py  tests.py  urls.py  views.py
app/apps/transacciones/: apps.py  facturacion.py  models.py  stripe_views.py  urls.py  views.py
app/apps/usuarios/: forms.py  models.py  tasks.py  urls.py  views.py
app/clientes/: models.py  urls.py  views.py
app/global_exchange_django/: asgi.py  celery.py  context_processors.py  settings.py  urls.py  views.py  wsgi.py
app/settings/: __init__.py  base.py  development.py  production.py
app/static/css/: daisyui-theme.js  input.css  output.css  tailwind.config.js
app/staticfiles/: currency_denominations.json
app/templates/: 400.html  403.html  404.html  500.html  base.html  error_403.html  error_base.html  index.html
app/templates/emails/: tasa_cambios_summary.html  tasa_cambios_summary.txt
app/templates/includes/: footer.html  header.html  header_admin.html  header_admin_conditional.html  header_analista.html
app/templates/tasas_cambio/: tasa_cambio_list.html
app/templates/transacciones/: simular_cambio.html  vender_divisa.html
app/temporary_test_app/: apps.py  models.py
app/temporary_test_app/tests/: test_models.py
app/usuarios/: __init__.py  models.py  serializers.py  tests.py
app/utils/: validators.py
(+165 files in other folders)
