[project]
name = "app"
version = "0.1.0"
description = "Sistema Global Exchange"
readme = "README.md"
requires-python = ">=3.13"
authors = [{ name = "Martín Ferrer", email = "martinferrer2010@fpuna.edu.py" },
            { name = "Fabrizio Daisuke Kawabata Miyamoto" , email = "fabrizziokawabata@fpuna.edu.py"},
            { name = "Atilio Sebastián Paredes Pérez", email = "atilioparedes973@fpuna.edu.py"},
            { name = "Ian Alexander Torres Marecos", email = "iantorressm@fpuna.edu.py"},
            { name = "Lucas Daniel Lamas Lezcano", email = "lucasdaniellamas876@fpuna.edu.py"},
        ]

# Runtime dependencies
dependencies = [
    "Django==5.2.5",
    "django-environ>=0.12.0",
    "psycopg[binary]",
    "plotly==6.3.0",
    "gunicorn==23.0",
    "dj-database-url",        # parse DATABASE_URL easily
    "python-dotenv",          # load .env in dev if desired
]

[project.optional-dependencies]
# dev extras (testing, linting, docs)
dev = [
    "pytest>=8.4.1",
    "pytest-django>=4.11.1",
    "ruff>=0.12.9",
    "sphinx>=8.2.3",
    "sphinx-autodoc-typehints>=3.2.0",
    "sphinx-rtd-theme>=3.0.2",
    "pyright>=1.1.403",
    "pre-commit>=4.3.0",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."] # list of folders that contain the packages (["."] by default)
include = [
    "<package name>",
] # package names should match these glob patterns (["*"] by default)
exclude = [] # exclude packages matching these glob patterns (empty by default)
namespaces = false # to disable scanning PEP 420 namespaces (true by default)

[tool.ruff.lint]
select = ["ALL"]

[tool.ruff]
# Minimal ruff config stored here so we have one source of truth
line-length = 120
select = ["E", "F", "W", "C", "B", "I", "RUF"]
exclude = [".venv", "venv", "build", "dist", ".git"]
