[project]
name = "app"
version = "0.1.0"
description = "Sistema Global Exchange"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    { name = "Martín Ferrer Canese", email = "martinferrer2010@fpuna.edu.py" },
    { name = "Fabrizio Daisuke Kawabata Miyamoto", email = "fabrizziokawabata@fpuna.edu.py" },
    { name = "Atilio Sebastián Paredes Pérez", email = "atilioparedes973@fpuna.edu.py" },
    { name = "Ian Alexander Torres Marecos", email = "iantorressm@fpuna.edu.py" },
    { name = "Lucas Daniel Lamas Lezcano", email = "lucasdaniellamas876@fpuna.edu.py" },
]

# Runtime dependencies
dependencies = [
    "django==5.2.5",
    "django-environ>=0.12.0",
    "psycopg[binary]",
    "plotly==6.3.0",
    "gunicorn==23.0",
    "environ>=1.0",
    "pycountry>=24.6.1",
    "forex-python>=1.9.2",
]

[project.optional-dependencies]
# dev extras (testing, linting, docs)
dev = [
    "requests>=2.32.5",
    "ruff>=0.12.9",
    "sphinx>=8.2.3",
    "sphinx-autodoc-typehints>=3.2.0",
    "sphinx-rtd-theme>=3.0.2",
    "pyright>=1.1.403",
    "pre-commit>=4.3.0",
    "djlint>=1.36.4",
    "pytest>=8.4.1",
    "pytest-django>=4.11.1",
    "model-bakery>=1.16.0",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."] # list of folders that contain the packages (["."] by default)
include = [
    "<package name>",
] # package names should match these glob patterns (["*"] by default)
exclude = [] # exclude packages matching these glob patterns (empty by default)
namespaces = false # to disable scanning PEP 420 namespaces (true by default)

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "B",   # flake8-bugbear
    "I",   # isort
    "W",   # pycodestyle warnings
    "C",   # mccabe complexity
    "N",   # naming conventions
    "D",   # docstring issues (pydocstyle)
    "RUF", # ruff-specific rules
]
ignore = [
    "RUF012", # Mutable class attributes should be annotated with typing.ClassVar
    "D203",   # Ignore incompatible rule for blank lines before class, there should be line before class
    "D213",   # Ignore incompatible rule for multi-line summary, multi-line comment should be in first
    "D105",   # Ignore missing docstring in magic method
]

# Allow autofixing selected with --fix flag
fixable = ["A", "B", "C", "D", "E", "F", "I", "N", "RUF", "W"]
unfixable = []

[tool.ruff]
line-length = 120
exclude = [".venv", "venv", "build", "dist", ".git"]

[tool.ruff.lint.per-file-ignores]
"dev.py" = ["T201"] # Allow print statements in dev.py

[tool.djlint]
profile = "django"
ignore = "T003,H030,H031,H029"
# T003: Endblock should have name
# H030: Adding meta description
# H031: Adding meta keywords
# H029: Consider using lowercase form method values. (Ignoramos por POST, GET, etc.)
[tool.djlint.per-file-ignores]
